style: fix carousel dots in dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,8 @@ body {
   opacity: 1 !important;
 }
 
-.slick-dots li button {
+.slick-dots li::after,
+.slick-dots li {
   background-color: white !important;
+  border-radius: 3px !important;
 }
